--- a/pagetmpl/topic/topic_detail.html
+++ b/pagetmpl/topic/topic_detail.html
@@ -10,6 +10,9 @@
     </div>
   </div>
   <div class="card-body">
+    {% if perms.topic.delete_topic %}
+    <a href="{% url 'topic_delete' topic.id %}" class="btn btn-sm btn-danger float-right">刪除主題</a>
+    {% endif %}
     {{ topic.content|linebreaks }}
   </div>
   {% if user.is_authenticated %}
@@ -26,6 +29,9 @@
     <small class="text-muted">
       <i class="fas fa-user"></i> {{ reply.author }}
       <i class="fas fa-clock"></i> {{ reply.created|date:"Y/m/d H:i" }}
+      {% if perms.topic.delete_reply %}
+      <a href="{% url 'reply_delete' reply.id %}" class="btn btn-sm btn-danger">刪除回覆</a>
+      {% endif %}
     </small>
   </li>
   {% endfor %}
